# rust-api

./: .dockerignore  .gitignore  Cargo.toml  Makefile.toml  NOTE.md  README.md  api-test.http  compose.yml  docker-compose.yml
.githooks/: pre-commit
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml  deploy_app.yaml
.sqlx/: query-262e767baedb443d746ea514dc08c5f412f64acb7735a4b399590e9cc694fd37.json  query-2c2f35f76ac7bb559fa5e654ee2ce90fe5c4cde5685f3a263a9bc3963b9c75ea.json  query-2e2cf322410416ca29e3ae1b98330fe25f01c90407de64df0225f034efd1cea2.json  query-3253ea4800f9b85d9251a2b12ada50ff40d0b437a7464e0c1bc7acb543fadf58.json  query-72bb1bd454665f817a5c183871785a200cb35b4cf40611e9ec5be111fb35ed32.json  query-74524ad6f53f9827f725274b83729e9e70b9b85a1df34d0a2d43daba6a06477d.json  query-7d84db414115650a32deb111ded2ecc0ae5492b01a20944c5bb5cd5da5583932.json  query-8b1d778e98c8f823c67b5cc548cba8362f8ecf6cb7265dea905839e6049ed80e.json  query-af77849d1a027bc2a2ad09d5ff2c1e684cfa8660fe3f2dcec54149d7160fa23c.json  query-b4852610bd65b591acbe92f70d07b4f2656903bfd751421a22935e76912a87a0.json  query-b64c892c9cf38ff4a1403cab5259664710a17f14f11c80bfa31a00c4624d6bee.json  query-d8735050ed5f7f9a545e59167308ce275ff202c520cec964665875f8fc5b7cba.json  query-ed6b21503367df04a2764ca21b8349fbba84f1c266ba0031c062ceda05352875.json  query-f18f3d46c39ab2e4f765fdb4c0de4c8e4dd990eede3c611f56c58480f5274b8b.json
adapter/: Cargo.toml
adapter/migrations/: 20250304035325_start.down.sql  20250304035325_start.up.sql
adapter/src/: lib.rs
adapter/src/database/: mod.rs
adapter/src/redis/: mod.rs
api/src/: extractor.rs  openapi.rs
data/: initial_setup.sql
docker/ecr/: Dockerfile
docker/rust/: Dockerfile
frontend/: README.md  sample.env.local
infra/: main.tf
infra/app/: main.tf
infra/network/: main.tf  variables.tf
infra/secrets/: main.tf
kernel/src/: lib.rs
registry/src/: lib.rs
rstest-example/: .env  Cargo.toml
rstest-example/src/: lib.rs
rstest-example/src/fixtures/: common.sql
shared/src/: config.rs  env.rs  error.rs  lib.rs
src/: main.rs
(+36 files in other folders)
