[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

[[bin]]
# file name and target path when compile
name = "app"
path = "src/main.rs"
[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
rstest = "0.18.2"
