[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

[[bin]]
# file name and target path when compile
name = "app"
path = "src/bin/app.rs"

[workspace.dependencies]
# registering dependencies
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
shared = { path = "./shared" }
registry = { path = "./registry" }
### separation of workspace dep and third party ###
anyhow = "1.0.75"
axum = { version = "0.7.5", features = ["macros"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
tokio = { version = "1.37.0", features = ["full"] }
rstest = "0.18.2"
async-trait = "0.1.74"

[dependencies]
# enable dependencies in src/app.rs
adapter.workspace = true
api.workspace = true
shared.workspace = true
registry.workspace = true
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
